@@ -47,13 +47,15 @@ public class SecurityConfig {
                 .cors((cors) -> cors
                         .configurationSource(request -> {
                             CorsConfiguration configuration = new CorsConfiguration();
-                            configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://34.47.90.224:8080", "http://34.47.90.224:3000"));
-                            configuration.setAllowedMethods(Collections.singletonList("*"));
+                            configuration.setAllowedOrigins(List.of(
+                                    "http://localhost:3000",
+                                    "http://34.47.90.224:8080",
+                                    "http://34.47.90.224:3000"));
+                            configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE"));
                             configuration.setAllowCredentials(true);
                             configuration.setAllowedHeaders(Collections.singletonList("*"));
-                            // configuration.setMaxAge(3600L);
-                            configuration.setExposedHeaders(Collections.singletonList("*"));
-                            configuration.setExposedHeaders(List.of("access", "Content-Disposition")); // S3 관련 헤더 추가
+                            configuration.setMaxAge(3600L);
+                            configuration.setExposedHeaders(List.of("access", "Content-Disposition"));
                             return configuration;
                         }))
                 .formLogin((auth) -> auth.disable())
@@ -62,10 +64,25 @@ public class SecurityConfig {
         // 경로별 접근 제어
         http.authorizeHttpRequests((request) ->
                 request
-                        .requestMatchers("/login", "/emp/**", "/reissue").permitAll()
+                        // 전체 접근
+                        .requestMatchers("/login", "/reissue").permitAll()
+
+                        // Swagger 경로 전체 접근
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/swagger-resources/**").permitAll()
+
+                        // 관리자만 접근
                         .requestMatchers("/admin/**").hasRole("ADMIN")
-                        // Swagger 문서 관련 경로 전체 접근 허용
-                        // .requestMatchers("/swagger-ui/**").permitAll()
+
+                        /* 사원 */
+                        .requestMatchers("/emp/**").hasAnyRole("ADMIN", "EMPLOYEE")
+
+                        /* 채팅 */
+
+
+                        /* 휴가 */
+
+
+
                         // .anyRequest().permitAll());          // 전체 허용(임시)
                         .anyRequest().authenticated());
         http
